new file:   branch/templates/branch/branch_add.html 	deleted:    branch/templates/branch/branch_edit.html 	modified:   branch/templates/branch/branch_list.html 	new file:   branch/templates/branch/index_list.html 	modified:   branch/urls.py 	modified:   branch/views.py 	modified:   dashboard/templates/dashboard/chart_list.html 	modified:   dashboard/templates/dashboard/dashboard.html 	modified:   dashboard/templates/dashboard/index_list.html 	modified:   dashboard/urls.py 	modified:   dashboard/views.py 	new file:   requirements.txt 	modified:   static/css/admin.css 	modified:   static/css/main.css 	modified:   telecom/forms.py 	new file:   telecom/migrations/0002_rename_boxmodel_vivoboxmodel.py 	new file:   telecom/migrations/0003_rename_smartmodel_smartphonemodel_and_more.py 	new file:   telecom/migrations/0004_smartphone_tracking_code_vivobox_tracking_code.py 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/index_list.html 	modified:   telecom/templates/telecom/line/line_list.html 	modified:   telecom/templates/telecom/param/index_list.html 	modified:   telecom/templates/telecom/param/line/plan_list.html 	modified:   telecom/templates/telecom/param/line/status_list.html 	modified:   telecom/templates/telecom/param/line/status_rfp_list.html 	modified:   telecom/templates/telecom/param/smartphone/model_add.html 	modified:   telecom/templates/telecom/param/smartphone/model_edit.html 	modified:   telecom/templates/telecom/param/smartphone/model_list.html 	modified:   telecom/templates/telecom/param/smartphone/status_add.html 	modified:   telecom/templates/telecom/param/smartphone/status_edit.html 	modified:   telecom/templates/telecom/param/smartphone/status_list.html 	modified:   telecom/templates/telecom/param/vivobox/model_add.html 	modified:   telecom/templates/telecom/param/vivobox/model_edit.html 	modified:   telecom/templates/telecom/param/vivobox/model_list.html 	modified:   telecom/templates/telecom/param/vivobox/status_add.html 	modifie

--- a/dashboard/templates/dashboard/chart_list.html
+++ b/dashboard/templates/dashboard/chart_list.html
@@ -3,7 +3,7 @@
 {% block title %}Lista | Gráficos | Sapore{% endblock %}
 
 {%block list_title%}Gráficos {%endblock%}
-{%block url_add%}{% url 'chart_add' %}{%endblock%}
+{%block url_add%}{% url 'add_object' 'chart' %}{%endblock%}
 
 {%block scripts%}
 <script>
@@ -33,4 +33,4 @@
 </td>
 {%endblock%}
 
-{%block url_edit%}{% url 'chart_edit' object.id %}{%endblock%}
+{%block url_edit%}{% url 'edit_object' 'chart' object.id %}{%endblock%}
