--- a/telecom/templates/telecom/param/smartphone/status_add.html
+++ b/telecom/templates/telecom/param/smartphone/status_add.html
@@ -2,5 +2,5 @@
 
 {% block title %}Smartphone | Adicionar Status | Sapore{% endblock %}
 
-{%block back_url%}{% url 's_status_list' %}{%endblock%}
+{%block back_url%}{% url 'smartphone_status_list' %}{%endblock%}
 {%block title_form%}Adicionar Status{%endblock%}
