--- a/telecom/templates/telecom/param/vivobox/model_add.html
+++ b/telecom/templates/telecom/param/vivobox/model_add.html
@@ -2,5 +2,5 @@
 
 {% block title %}Vivobox | Adicionar Modelo | Sapore{% endblock %}
 
-{%block back_url%}{% url 'v_model_list' %}{%endblock%}
+{%block back_url%}{% url 'vivobox_model_list' %}{%endblock%}
 {%block title_form%}Adicionar Modelo de Vivobox{%endblock%}
