--- a/telecom/templates/telecom/param/vivobox/status_add.html
+++ b/telecom/templates/telecom/param/vivobox/status_add.html
@@ -2,5 +2,5 @@
 
 {% block title %}Vivobox | Adicionar Status | Sapore{% endblock %}
 
-{%block back_url%}{% url 'v_status_list' %}{%endblock%}
+{%block back_url%}{% url 'vivobox_status_list' %}{%endblock%}
 {%block title_form%}Adicionar Status{%endblock%}
