--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,3 +1,19 @@
+*{
+    font-family:'Aileron';
+}
+
+@font-face {
+    font-family: 'Aileron';
+    font-style: normal;
+    src: local('Aileron'), url('/static/fonts/Aileron-Regular.otf') format('opentype');
+}
+
+#logoSapore {
+    width: 80px;
+    height: 20px;
+    padding-right: 2rem;
+}
+
 #branding h1,
 #branding h1 a,
 #branding h1 a:link,
