--- a/telecom/templates/telecom/param/smartphone/model_add.html
+++ b/telecom/templates/telecom/param/smartphone/model_add.html
@@ -2,5 +2,5 @@
 
 {% block title %}Smartphone | Adicionar Modelo | Sapore{% endblock %}
 
-{%block back_url%}{% url 's_model_list' %}{%endblock%}
+{%block back_url%}{% url 'smartphone_model_list' %}{%endblock%}
 {%block title_form%}Adicionar Modelo de Smartphone{%endblock%}
