--- a/telecom/templates/telecom/param/smartphone/model_edit.html
+++ b/telecom/templates/telecom/param/smartphone/model_edit.html
@@ -2,5 +2,5 @@
 
 {% block title %}Smartphone | Editar Modelo | Sapore{% endblock %}
 
-{%block back_url%}{% url 's_model_list' %}{%endblock%}
+{%block back_url%}{% url 'smartphone_model_list' %}{%endblock%}
 {%block title_form%}Editar Modelo{%endblock%}
