--- a/telecom/templates/telecom/param/vivobox/model_edit.html
+++ b/telecom/templates/telecom/param/vivobox/model_edit.html
@@ -2,5 +2,5 @@
 
 {% block title %}Vivobox | Editar Modelo | Sapore{% endblock %}
 
-{%block back_url%}{% url 'v_model_list' %}{%endblock%}
+{%block back_url%}{% url 'vivobox_model_list' %}{%endblock%}
 {%block title_form%}Editar Modelo{%endblock%}
