--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -10,7 +10,7 @@
 {% block branding %}
     <h1 id="head">
         <img src="{% static 'img/logo_sapore.png' %}" 
-             style="width: 102px; height: 30px;"> Administração
+            id="logoSapore" aria-label="Logo"> Administração
     </h1>
 {%endblock%}
 
