--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,14 @@
         };
 
         $(window).on('load', function(){
-            setTimeout(removeLoader, 500); //wait for page load
+            timeToRemoveLoader(300);
+        });
+
+        function timeToRemoveLoader(wait_time) {
+            setTimeout(removeLoader, wait_time); //wait for page load
             showLoader();
             topFunction();
-        });
+        }
 
         function removeLoader(){
             $( "#loadingDiv" ).remove();
@@ -45,17 +49,15 @@
 
     {% include 'partials/_nav.html' %}
 
-    <div class="container">
+    <main class="container">
         <div class="row">
             <div class="col-lg-12">
                 {% block content %}{% endblock %}
             </div>
         </div>
-    </div>
+    </main>
 
     {% include 'partials/_footer.html' %}
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 <!--Marcelo Botan-->
 </html>
