--- a/templates/form.html
+++ b/templates/form.html
@@ -7,7 +7,8 @@
     </svg> Voltar</a>
 </div>
 <h1 class="mt-1">{%block title_form%}{%endblock%}</h1>
-<form method="post" class="form-group " enctype="multipart/form-data">
+{%block subtitle%}{%endblock%}
+<form method="post" class="form-group" onSubmit="showLoader()" enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'partials/_messages.html' %}
     <div class="table-responsive">
