--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -5,7 +5,7 @@
 @font-face {
     font-family: 'Aileron';
     font-style: normal;
-    src: local('Aileron'), url('{% static "fonts/Aileron-Regular.otf" %}') format('opentype');
+    src: local('Aileron'), url('/static/fonts/Aileron-Regular.otf') format('opentype');
 }
 
 :root {
