modified:   dashboard/templates/dashboard/chart_card.html - Change card style 	modified:   printers/admin.py - Add objects in admin 	new file:   printers/forms.py - Add printer form 	modified:   printers/urls.py - Add printer url 	modified:   printers/views.py - Add printer view 	modified:   telecom/templates/telecom/index_list.html - Change card style 	modified:   templates/static/css/main.css - Change card style

--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -1,5 +1,8 @@
 *{
     font-family:'Aileron';
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 @font-face {
@@ -16,6 +19,10 @@
     --shadow-light: rgba(46, 42, 37, 0.2);
     --shadow: rgba(46, 42, 37, 0.5);
     --shadow-dark: rgba(46, 42, 37, 0.8);
+}
+
+body {
+    background-color: rgba(46, 42, 37, 0.1);
 }
 
 #loadingDiv {
