--- a/telecom/templates/telecom/index_list.html
+++ b/telecom/templates/telecom/index_list.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div class="collapse" id="card_filter_line">
-    <div class="card border-secondary px-3 py-3">
+    <div class="card text-bg-light px-3 py-3">
         <form class="row g-3" action="{%block url_search%}{%endblock%}">
             {% block filter_form %}{%endblock%}
             <div class="d-flex justify-content-between">
