add font bold 	modified:   templates/base.html 	modified:   templates/static/css/main.css

--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -7,8 +7,16 @@
 
 @font-face {
     font-family: 'Aileron';
+    font-weight: normal;
     font-style: normal;
     src: local('Aileron'), url('/static/fonts/Aileron-Regular.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'Aileron';
+    font-weight: bold;
+    font-style: normal;
+    src: local('Aileron'), url('/static/fonts/Aileron-Bold.otf') format('opentype');
 }
 
 :root {
